# search4people_v2

./: .env.example  .gitignore  DEV.md  Dockerfile  README.md  chainlit.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: en-US.json  ru.json
.claude/: settings.json
app/: __init__.py  auth.py  config.py  history.py  i18n.py  llm.py  main.py
app/a2a/: __init__.py  auth.py  executor.py  server.py  task_store.py
app/db/: chat_history.py  chat_history_schema.sql  connection.py  profiles.py  schema.sql  tokens.py  users.py
app/graph/: bridge.py  build.py  nodes.py  prompts.py
app/guardrails/: __init__.py  audit.py  config.py  detectors.py  engine.py  policy.py  types.py
app/guardrails/backends/: base.py  http.py  local.py  noop.py
app/models/: profile.py  state.py
app/scripts/: create_token.py  create_user.py
app/tools/: extract.py  fetch.py  rate_limiter.py  robots.py  search.py
app/ui/: profile_card.py  session_state.py  steps.py  tags.py
docs/superpowers/plans/: 2026-06-03-deepeval-and-dev-docs.md  2026-06-15-a2a-server.md  2026-06-15-guardrails-gliner.md  2026-06-18-persistent-chat-history.md  2026-06-18-snippet-as-fact-source.md
docs/superpowers/specs/: 2026-06-03-deepeval-and-dev-docs-design.md  2026-06-15-a2a-server-design.md  2026-06-15-guardrails-gliner-design.md  2026-06-18-persistent-chat-history-design.md  2026-06-18-snippet-as-fact-source-design.md
examples/: a2a_demo.py
tests/: conftest.py  test_a2a_auth.py  test_a2a_executor.py  test_a2a_server.py  test_a2a_task_store.py  test_bridge.py  test_build_profile_blocked_snippet.py  test_build_profile_evidence.py  test_chat_history_config.py  test_chat_history_db.py  test_extract_snippet.py  test_fetch_pages_snippet.py  test_graph_flow.py  test_history.py  test_main_wiring.py  test_narrow_planning.py  test_profile_model.py  test_session_state.py  test_tags.py  test_tokens.py  test_tools_fetch.py  test_tools_search.py
tests/evals/: conftest.py  judge.py  test_build_profile_quality.py  test_e2e_relevance.py  test_extract_faithfulness.py  test_narrow_query_quality.py
tests/evals/data/: goldens.json
tests/evals/data/candidates/: jane_doe.json
tests/evals/data/pages/: jane_doe_github.md  not_jane_doe.md
tests/guardrails/: fakes.py  test_audit.py  test_config.py  test_detectors.py  test_engine.py  test_graph_integration.py  test_local_backend.py  test_policy.py
